[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Dialog/table_dialog.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="InputEventKey" id=2]
scancode = 16777221

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="table_dialog" type="Panel"]
margin_left = 96.0
margin_top = 90.0
margin_right = 282.0
margin_bottom = 201.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0352941, 0.917647, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Create a table..."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 42.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
rect_min_size = Vector2( 62, 0 )
text = "Rows:      "

[node name="rows_SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 140.0
margin_bottom = 24.0
min_value = 1.0
max_value = 128.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 170.0
margin_bottom = 70.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
rect_min_size = Vector2( 62, 0 )
text = "Columns:"

[node name="columns_SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 140.0
margin_bottom = 24.0
min_value = 1.0
max_value = 32.0
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 170.0
margin_bottom = 94.0
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 81.0
margin_right = 112.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
shortcut = SubResource( 3 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Cancel"
[connection signal="visibility_changed" from="." to="." method="_on_table_dialog_visibility_changed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_focus_exited"]
